layout bug fix

--- a/src/Main/Main.module.scss
+++ b/src/Main/Main.module.scss
@@ -2,22 +2,27 @@
 @import "../common/styles/sass/mixins";
 
 .mainBlock {
-  height: 80vh;
+  height: 100vh;
   background-color: #f8f9fa;
-
+  @media screen and (max-width: 1374px){
+    display: flex;
+    align-items: center;
+  }
   .mainContainer {
-    justify-content: space-around;
+    justify-content: flex-start;
+    margin-left: 25%;
     border: none;
-    @media screen and (max-width: 1374px) {
+    @media screen and (max-width: 1374px){
+      margin: 0 auto;
       justify-content: space-between;
       min-height: 20vh;
+      height: 80vh;
     }
-
     .photo {
       width: 600px;
       height: 600px;
-      position: relative !important;
-      @media screen and (max-width: 1374px) {
+      /*background-color: #0064a5;*/
+      @media screen and (max-width: 1374px){
         width: 100%;
         height: 40%;
       }
@@ -25,53 +30,49 @@
       & img {
         width: 100%;
         border-radius: 50%;
+        //position: relative;
+
       }
     }
-
-    .textContainer {
-      width: 39.7%;
-      height: 100%;
-      .text {
-        width: 400px;
+    .text {
+      width: 400px;
+      @media screen and (min-width: 1374px){
         position: absolute;
         content: '';
-        left: 60%;
-        top: -50%;
-        bottom: 10px;
-        transform: translate(-50%, 50%);
-        /*background-color: #0064a5;*/
-        & h1 {
-          & span {
-            @include text($fontFamily, 90px, 800, $textColor);
-            text-shadow: 1px 1px #fff;
-            line-height: 1em;
-            margin: 0;
-            @media screen and (max-width: 600px) {
-              @include text($fontFamily, 50px, 800, $textColor);
-            }
+        left: 57%;
+        top: 30%;
+      }
+
+        //transform: translate(-50%, 50%);
+      & h1 {
+        & span {
+          @include text($fontFamily, 70px, 800, $textColor);
+          text-shadow: 1px 1px #fff;
+          line-height: 1em;
+          margin: 0;
+          @media screen and (max-width: 600px){
+            @include text($fontFamily, 50px, 800, $textColor);
           }
         }
-
-        & h6 {
-          @include text($fontFamily, 14px, 700, $textColor);
-          line-height: 1.25em;
-          //display: inline-block;
-          text-transform: uppercase;
-          letter-spacing: 2px;
-          margin-bottom: 0;
-          margin-top: 0;
-        }
-
-        & span {
-          @include text($fontFamily, 16px, 400, $textSecondColor);
-          line-height: 1.75em;
-          margin: 0 0 20px;
-          display: block;
-          margin-block-start: 1em;
-          margin-block-end: 1em;
-          margin-inline-start: 0;
-          margin-inline-end: 0;
-        }
+      }
+      & h6 {
+        @include text($fontFamily, 14px, 700, $textColor);
+        line-height: 1.25em;
+        //display: inline-block;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        margin-bottom: 0;
+        margin-top: 0;
+      }
+      & span {
+        @include text($fontFamily, 16px, 400, $textSecondColor);
+        line-height: 1.75em;
+        margin: 0 0 20px;
+        display: block;
+        margin-block-start: 1em;
+        margin-block-end: 1em;
+        margin-inline-start: 0;
+        margin-inline-end: 0;
       }
     }
   }
