--- a/src/Skills/Skills.module.scss
+++ b/src/Skills/Skills.module.scss
@@ -2,7 +2,7 @@
     /*height: 80vh;*/
     background-color: #f8f9fa;
     padding-bottom: 120px;
-    padding-top: 120px;
+    //padding-top: 120px;
     .skillsContainer {
         border: none;
         align-items: center;
